objects/copado__Org__c.object
<CustomObject>
    <description>Org authenticated via OAuth that you will need in order to schedule a deployment, run or schedule a Git Snapshot, run or schedule Apex test for an Org and to add more Org credentials in the same Salesforce server (pod).</description>
    <fields>
        <fullName>copado__Compliance_Status__c</fullName>
        <description>Status of the most recent Compliance Scan of the Org.</description>
        <inlineHelpText>Status of the most recent Compliance Scan of the Org.</inlineHelpText>
        <label>Compliance Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Custom_Domain__c</fullName>
        <inlineHelpText>Eg: https://company.my.salesforce.com</inlineHelpText>
        <label>Custom Domain</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>copado__Default_Credential__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, this will be the preferred Org credential for Promotion deployments</inlineHelpText>
        <label>Default Credential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Default_Scratch_Org_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Will be used for Review app creation out of promotions. Otherwise every scratch org may be created by their own scratch org definition either with a template or without.</inlineHelpText>
        <label>Default Scratch Org Definition</label>
        <referenceTo>copado__Scratch_Org_Definition__c</referenceTo>
        <relationshipLabel>Credentials</relationshipLabel>
        <relationshipName>Org_Credentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Developer_Hub_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer Hub Credential</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>copado__Org__c.copado__is_Developer_Hub_Org__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Credentials</relationshipLabel>
        <relationshipName>Org_Credentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Disable_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this checkbox will not validate the org credentials when the record is saved or viewed.</inlineHelpText>
        <label>Disable Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Environment records are created automatically when Credentials are authenticated. The Environment may have multiple Credentials which correspond to different users of the same Environment.</description>
        <inlineHelpText>Environment records are created automatically when Org Credentials are authenticated. The Environment may have multiple Org Credentials which correspond to different users of the same Environment.</inlineHelpText>
        <label>Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>Credentials</relationshipLabel>
        <relationshipName>Org_Credentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Error__c</fullName>
        <label>Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Last_Apex_Tests_Datetime__c</fullName>
        <label>Last Apex Tests Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Last_Apex_Tests_Status__c</fullName>
        <label>Last Apex Tests Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Last_Compliance_Scan_Date__c</fullName>
        <label>Last Compliance Scan Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Last_Git_Backup_Datetime__c</fullName>
        <label>Last Git Backup Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Last_Git_Backup_Status__c</fullName>
        <label>Last Git Backup Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Metadata_Types__c</fullName>
        <inlineHelpText>Empty means all types. Select one or more types to limit the backup only to selected items.</inlineHelpText>
        <label>Metadata Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Minimum_Apex_Test_Coverage__c</fullName>
        <description>Minimum code coverage required for deploying changes from this Environment.</description>
        <formula>copado__Environment__r.copado__Minimum_Apex_Test_Coverage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Minimum code coverage required for deploying changes from this Environment.</inlineHelpText>
        <label>Minimum Apex Test Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Oauth_Signature__c</fullName>
        <description>This value is automatically set and updated by Copado.</description>
        <inlineHelpText>This value is automatically set and updated by Copado.</inlineHelpText>
        <label>Oauth Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Org_Type__c</fullName>
        <label>Org Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Production/Developer</fullName>
                    <default>true</default>
                    <label>Production/Developer</label>
                </value>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
                <value>
                    <fullName>Scratch Org - Test only</fullName>
                </value>
                <value>
                    <fullName>Scratch Org</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Platform__c</fullName>
        <formula>TEXT(copado__Environment__r.copado__Platform__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__SFDC_Org_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Organization Id for the Environment.</description>
        <externalId>true</externalId>
        <inlineHelpText>Organization Id for the Environment.</inlineHelpText>
        <label>SFDC Org ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__Scratch_Org_Expiration_Date__c</fullName>
        <label>Scratch Org Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Scratch_Org_Status__c</fullName>
        <label>Scratch Org Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Missing</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Test_Frequency__c</fullName>
        <description>Continuous Integration feature. Run all Apex Test methods and save the results in the Apex Test Result object to create email alerts or reports. This feature is very powerful along with Git Backups to detect recent failing changes automatically.</description>
        <inlineHelpText>Continuous Integration feature. Run all Apex Test methods and save the results in the Apex Test Result object to create email alerts or reports. This feature is very powerful along with Git Backups to detect recent failing changes automatically.</inlineHelpText>
        <label>Test Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Token__c</fullName>
        <inlineHelpText>A security token is an automatically generated key that you must use when connecting via the API.</inlineHelpText>
        <label>Security Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Type_Icon__c</fullName>
        <formula>IF( 
OR(ISPICKVAL(copado__Org_Type__c, &apos;Scratch Org&apos;),ISPICKVAL(copado__Org_Type__c, &apos;Scratch Org - Test Only&apos;)), 
IMAGE(&apos;/resource/1516617624000/&apos;+IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;)+&apos;DXType?isdtp=p1&apos;, &apos;Salesforce DX Scratch Org&apos;, 40, 40),
IF( 
AND(ISPICKVAL(copado__Org_Type__c, &apos;Production/Developer&apos;), copado__is_Developer_Hub_Org__c == FALSE), 
IMAGE(&apos;/resource/1516617528000/&apos;+IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;)+&apos;sforce?isdtp=p1&apos;, &apos;Production/Developer&apos;, 40, 50),
IF( 
ISPICKVAL(copado__Org_Type__c, &apos;Sandbox&apos;), 
IMAGE(&apos;/resource/1516617549000/&apos;+IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;)+&apos;sandbox?isdtp=p1&apos;, &apos;Sandbox&apos;, 40, 40),
IF( 
AND(ISPICKVAL(copado__Org_Type__c, &apos;Production/Developer&apos;), copado__is_Developer_Hub_Org__c == TRUE), 
IMAGE(&apos;/resource/1516617568000/&apos;+IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;)+&apos;Hub?isdtp=p1&apos;, &apos;DX Developer Hub&apos;, 40, 40),
&apos;Unknown Org Type&apos; 
) 

) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Validated_Date__c</fullName>
        <description>Latest OAuth authentication validation date.</description>
        <inlineHelpText>Latest OAuth authentication validation date.</inlineHelpText>
        <label>Validated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Validated_Status__c</fullName>
        <formula>IF(ISBLANK(copado__Validated_Date__c),
&quot;Error&quot; ,
 IF( DATEVALUE(copado__Validated_Date__c) == TODAY(), 
    &quot;OK&quot;,&quot;None&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validated Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__is_Developer_Hub_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Developer Hub Credential</label>
        <type>Checkbox</type>
    </fields>
    <label>Credential</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Org_Type__c</columns>
        <columns>copado__Username__c</columns>
        <columns>copado__SFDC_Org_ID__c</columns>
        <columns>copado__Test_Frequency__c</columns>
        <columns>copado__Validated_Date__c</columns>
        <columns>copado__Validated_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>copado__Last_Git_Backup_Status__c</columns>
        <columns>copado__Last_Apex_Tests_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Credential Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credentials</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>